# pg-tools

./: .gitignore  Gemfile  README.md  Rakefile  calc.ebnf  devpg  pg-tools.gemspec  pg-verify.gemspec  progg.gemspec  vscript.rb
.github/workflows/: rpsec.yml
data/: banner.txt  nusmv.sample.smv
data/config/: pg-tools.yml  pg-verify.yml  progg.yml  theme.yml
data/project-template/: .gitignore.resource  README.md  program-graph.rb
doc/: expose.md
doc/examples/: railroad_crossing.rb  train-tree.rb  weidezaun.rb  weidezaun.txt
doc/expose/: expose.md
exe/: pg-tools  pg-verify
integration_tests/ruby_dsl/: 001_states.rb  002_transitions.rb  003_actions.rb  004_guards.rb  005_variables.rb  006_state_variables.rb  007_variable_initialization.rb  008_state_initialization.rb  009_shared_variables.rb  013_hazards.rb  (+11 more)
lib/: pg-tools.rb  pg-verify.rb  progg.rb
pg-dsl/: AST.hs  CHANGELOG.md  CST.hs  Jsonable.hs  LICENSE  Main.hs  Parser.hs  README.md  RangeCheck.hs  Token.hs  Tokenizer.hs  TypeCheck.hs  backup.txt  example.txt  output.json  pg-dsl.cabal  robot.txt
pg-dsl/app/: Jsonable.hs  Token.hs
pg-dsl/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
pg-dsl/examples/drucktank/: d.pg  k1.pg  k2.pg  m.pg  main.pg  s.pg  s1.pg  t.pg
pg-dsl/examples/outputs/: drucktank.json  robot.json
pg-dsl/examples/robot/: lightBarrier.pg  main.pg  robot.pg
pg-dsl/examples/robot/graphs/: robot.pg
sig/: pg-tools.rbs  pg-verify.rbs  progg.rbs
spec/: pg_verify_spec.rb  progg_spec.rb  spec_helper.rb
(+174 files in other folders)
